# avl

./: CMakeLists.txt  MinhaArvoreAVL.h  MinhaArvoreDeBuscaBinaria.h  MinhaListaEncadeada.h  main  main.cpp
